--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -29,17 +29,16 @@ spec:
           env:
             - name: BVL_JVM_THREAD_COUNT
               value: "50"
-
             - name: SPRING_CLOUD_CONFIG_URL
               value: http://config-service
             - name: SPRING_CONFIG_IMPORT
               value: "optional:configserver:http://config-service"
-
             - name: SPRING_R2DBC_URL
               value: r2dbc:postgresql://polar-postgres/polardb_order
             - name: SPRING_FLYWAY_URL
               value: jdbc:postgresql://polar-postgres/polardb_order
-
             - name: POLAR_CATALOG-SERVICE-URI
               value: http://catalog-service
+            - name: SPRING_RABBITMQ_HOST
+              value: "polar-rabbitmq"
 
