--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -41,4 +41,6 @@ spec:
               value: http://catalog-service
             - name: SPRING_RABBITMQ_HOST
               value: "polar-rabbitmq"
+            - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI
+              value: http://polar-keycloak/realms/PolarBookshop
 
