cloud-config -> 쿠버네티스 kustomize 방법으로 사용자 지정 설정 적용

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ ext {
     springCloudVersion = "2023.0.2"
     set('testcontainersVersion', "1.17.3")
     set('testKeycloakVersion', "3.3.1")
+    set('otelVersion', '1.33.3')
 
 }
 
@@ -51,12 +52,14 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
     implementation 'org.springframework.cloud:spring-cloud-stream-binder-rabbit'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     annotationProcessor 'org.projectlombok:lombok'
     runtimeOnly 'org.flywaydb:flyway-core'
     runtimeOnly 'org.postgresql:postgresql'
     runtimeOnly 'org.postgresql:r2dbc-postgresql'
     runtimeOnly 'org.springframework:spring-jdbc'
+    runtimeOnly "io.opentelemetry.javaagent:opentelemetry-javaagent:${otelVersion}"
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
