--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
   lifecycle:
     timeout-per-shutdown-phase: 15s # 15초간의 우아한 종료 기간 정의
   config:
-    import: "optional:configserver:"
+    import: "" #"optional:configserver:"
 
   r2dbc:
     name: polardb_order
@@ -72,9 +72,33 @@ spring:
 
 
 polar:
-  catalog-service-uri: "http://localhost:9001"
+  catalog-service-uri: http://localhost:9001
 
+info:
+  system: Polar-Bookshop
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: bindings, configprops, env, flyway, functions, health, heapdump, info, loggers, mappings, prometheus
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+      probes:
+        enabled: true
+  info:
+    os:
+      enabled: true
+    java:
+      enabled: true
+    env:
+      enabled: true
+
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
 
 
 
